# litesaver

./: .clang-format  CMakeLists.txt  LICENSE  README.md
incl/: Litesaver.hpp
incl_private/: Core.hpp  queries.hpp
include/: Core.hpp  Litesaver.hpp  queries.hpp
src/: Core.cpp  Litesaver.cpp  queries.cpp
test/: Litesaver_test.cpp
